Correct text vertical alignment of checkboxes in show sheets dialog

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -617,6 +617,7 @@ input[type='checkbox'].autofilter,
 	appearance: none;
 	width: 20px;
 	height: 20px;
+	vertical-align: middle;
 	background: url('images/lc_checkboxoff.svg') no-repeat center;
 	margin: 1px 8px;
 }
